<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homepage"
        android:title="@string/home"
        android:icon="@drawable/icon_home"
        />

    <item
        android:id="@+id/quran"
        android:title="@string/quran"
        android:icon="@drawable/icon_book"
        />

    <item
        android:id="@+id/audio"
        android:title="@string/audio"
        android:icon="@drawable/icon_audio"
        />

    <item
        android:id="@+id/guide"
        android:title="@string/guide"
        android:icon="@drawable/icon_explore"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/icon_profile"
        />

</menu>