<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context=".Activities.LoginPage"
    android:fillViewport="true"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="32dp">



    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/splashlogo"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/plus_jakarta_sans"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/welcome_back_text"
        android:textColor="@color/text_primary"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxStrokeColor="@color/secondary"
        app:hintTextColor="@color/neutral">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_text"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/secondary"
        app:hintTextColor="@color/neutral"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/neutral">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password_text"
            android:inputType="textPassword"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/Login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/neutral" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/or"
            android:textColor="@color/neutral"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/neutral" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/signup_question"
            android:textColor="@color/text_hint"
            android:layout_marginEnd="3dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:text="@string/sign_up_button"
            android:textColor="@color/tertiary"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvGuestMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:text="@string/continue_as_guest_offline"
        android:textColor="@color/neutral"
        android:textSize="14sp" />

</LinearLayout>

</LinearLayout>