<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context=".SignUpPage"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        tools:ignore="MissingConstraints">



        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/splashlogo"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Enter_heading"
            android:textColor="@color/text_primary"
            android:textSize="24sp" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxStrokeColor="@color/secondary"
            app:hintTextColor="@color/neutral">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:hint="@string/Email_text"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxStrokeColor="@color/secondary"
            app:hintTextColor="@color/neutral"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/neutral">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_heading"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:boxStrokeColor="@color/secondary"
            app:hintTextColor="@color/neutral"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/neutral">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignupConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_text"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/sign_up_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/neutral" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/or"
                android:textColor="@color/neutral"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/neutral" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/already_have_an_account_question"
                android:textColor="@color/text_hint"
                android:layout_marginEnd="3dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:text="@string/Login_button"
                android:textColor="@color/tertiary"
                android:textSize="14sp" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>